[SPLIT] Css [FIX] Layout bugs

--- a/assets/css/spinner.css
+++ b/assets/css/spinner.css
@@ -1,6 +1,16 @@
+.spinner {
+  width: calc(100vw - 430px);
+  height: calc(100vh - 100px);
+  margin-right: -100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Spinner container */
 .spinner__container {
-  position: absolute;
+  position: fixed;
   width: 1200px;
   height: 1117px;
   right: -10%;
@@ -45,4 +55,30 @@
   background-color: transparent;
   width: 130px;
   height: 130px;
+}
+
+.selected__dish__image {
+  position: fixed;
+  border-radius: 50%;
+  right: calc(30px + 560px / 2);
+  top: calc(100px + 560px / 2);
+}
+
+/* Arrow buttons */
+.arrow__buttons {
+  width: 600px;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 560px;
+  right: 11%;
+}
+
+.arrow__buttons button {
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/svg/arrow.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
